--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -68,7 +68,7 @@
             </ion-item>
           </ion-menu-toggle>
         </ion-list> -->
-        <ion-list>
+        <!-- <ion-list>
           <ion-list-header>
             <ion-label>Account</ion-label>
           </ion-list-header>
@@ -79,14 +79,14 @@
                 Profile
               </ion-label>
             </ion-item>
-          <!--  <ion-item [routerLink]="['/firebase/crud/listing']">
+            <ion-item [routerLink]="['/firebase/crud/listing']">
               <ion-icon slot="start" name="logo-firebase"></ion-icon>
               <ion-label>
                 Firebase CRUD
               </ion-label>
-            </ion-item> -->
+            </ion-item>
           </ion-menu-toggle>
-        </ion-list>
+        </ion-list> -->
        <!--  <ion-list>
           <ion-list-header>
             <ion-label>Functionalities</ion-label>
