--- a/src/app/video-playlist/video-playlist.page.html
+++ b/src/app/video-playlist/video-playlist.page.html
@@ -5,9 +5,9 @@
     </ion-buttons>
     <ion-title>Video Playlist</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="shareMedia()">
+      <!-- <ion-button (click)="shareMedia()">
         <ion-icon slot="icon-only" name="share"></ion-icon>
-      </ion-button>
+      </ion-button> -->
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
