--- a/src/app/painting/details/painting-details.page.html
+++ b/src/app/painting/details/painting-details.page.html
@@ -607,9 +607,9 @@
                       <p style="margin-left: 5px;">m2 / hour</p>
                     </ion-item>
                     <ion-item class="ion-padding">
-                      <ion-label>Tins needed :</ion-label>
+                      <ion-label>Time needed :</ion-label>
                       <ion-input clear-input name="tinsNeeded" [(ngModel)]="tinsNeeded"></ion-input>
-                      <p style="margin-left: 5px;">tins</p>
+                      <p style="margin-left: 5px;">hours</p>
                     </ion-item>
                   </ion-list>
                   <div class="ion-padding">
